package za.ac.cput.payroll.domain.employee;

public enum EmploymentType { PERMANENT, CONTRACT }
