package za.ac.cput.payroll.domain.job;

public enum PositionStatus { OPEN, CLOSED }
